2001-03-05  Bruno Haible  <haible@clisp.cons.org>

	* vasprintf.c (int_vasprintf): Cast second arg of strtoul, to avoid
	warning.

2001-02-04  Bruno Haible  <haible@clisp.cons.org>

	* system.h (O_BINARY, O_TEXT, setmode, fileno): New macros for systems
	that distinguish between text and binary I/O.

2001-02-04  Bruno Haible  <haible@clisp.cons.org>

	* error.c: Include <libintl.h> only if ENABLE_NLS || _LIBC.
	* getopt.c: Test ENABLE_NLS instead of 'defined HAVE_LIBINTL_H'.
	* obstack.c: Likewise.

2001-01-07  Bruno Haible  <haible@clisp.cons.org>

	* system.h: Assume <stdlib.h>, <string.h> exist.
	* fstrcmp.c: Likewise.
	* vasprintf.c: Likewise.

2001-01-05  Bruno Haible  <haible@clisp.cons.org>

	* basename.c: Include <stdio.h>, needed by assert on SunOS4.
	(basename): Convert to K&R C syntax.
	* vasprintf.c (int_vasprintf): Don't use fabs, it needs -lm on some
	platforms.

2000-12-31  Bruno Haible  <haible@clisp.cons.org>

	* hash.c (insert_entry): Use obstack_copy instead of obstack_copy0.

2000-12-30  Bruno Haible  <haible@clisp.cons.org>

	* system.h (open_po_file): Remove declaration.

2000-12-30  Bruno Haible  <haible@clisp.cons.org>

	* printf.h (printf_info): New fields is_char, is_longlong.
	(PA_FLAG_CHAR): New macro.
	* printf-parse.h: Include inttypes.h.
	(long_long_int): Define depending on HAVE_UNSIGNED_LONG_LONG.
	(ptrdiff_t): Define depending on HAVE_PTRDIFF_T.
	(parse_one_spec): Handle new ISO C99 length modifiers 'j', 't', 'z'.

2000-12-30  Bruno Haible  <haible@clisp.cons.org>

	* basename.c: Update from current fileutils version, keeping the
	function name as `basename' or `gnu_basename'.

	* error.c: Update from glibc-2.2 version.

	* fstrcmp.h: extern declaration.

	* getline.h: Comment out declarations on glibc2 systems.
	* getline.c: Make getstr() static, to avoid conflict with libncurses.

	* getopt.h: Update from glibc-2.2 version.
	* getopt.c: Likewise.

	* hash.h: Update from glibc-2.2 version. Don't assume keys are NUL
	terminated.